--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,14 @@
 	<body>
 		<div class="page-header">
 			{% if user.is_authenticated %}
+				<a href="/" class="top-menu"><span class="glyphicon glyphicon-home"></span></a>
 				<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+				<a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+				<p class="top-menu">Hello {{user.username}} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+			{% else %}
+				<a href="/" class="top-menu"><span class="glyphicon glyphicon-home"></span></a>
+				<a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+				<a href="{% url 'new_user' %}" class="top-menu"><span class="glyphicon glyphicon-user"></span></a>
 			{% endif %}
 			<h1><a href="/">Django Boys Blog</a></h1>
 			<p>Hi there!</p>
