--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,11 +4,26 @@
 	<div class="post">
 		{% if post.published_date %}
 			<div class="date">
-				{{ post.published_date }}
+				<p>published: {{post.published_date}}</p>
+				<br>
+				<p>by: {{post.author}}</p>
 			</div>
+		{% elif user.is_authenticated %}
+			<a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
 		{% endif %}
 		{% if user.is_authenticated %}
 			<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+			<!--<a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>-->
+			<button class="btn btn-default" onclick="doubleCheck()"><span class="glyphicon glyphicon-remove"></span></button>
+			<script>
+			function doubleCheck() {
+				let check = confirm('Are you sure you want to delete this post?');
+				if(check) {
+					// Procede to delete the post.
+					location.href = "{% url 'post_remove' pk=post.pk %}";
+				}
+			}
+			</script>
 		{% endif %}
 		<h2>{{ post.title }}</h2>
 		<p>{{ post.text|linebreaksbr }}</p>
