--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,6 +5,7 @@
 		<div class="post">
 			<div class="date">
 				<p>published: {{post.published_date}}</p>
+				<p>by: {{post.author}}</p>
 			</div>
 			<h2><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h2>
 			<p>{{post.text|linebreaksbr}}</p>
