--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,9 +12,9 @@
 			<a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
 		{% endif %}
 		{% if user.is_authenticated %}
-			<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+			<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil" title="Edit Post"></span></a>
 			<!--<a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>-->
-			<button class="btn btn-default" onclick="doubleCheck()"><span class="glyphicon glyphicon-remove"></span></button>
+			<button class="btn btn-default" onclick="doubleCheck()"><span class="glyphicon glyphicon-trash"></span></button>
 			<script>
 			function doubleCheck() {
 				let check = confirm('Are you sure you want to delete this post?');
